--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
 
 <p> HI THIS IS THE FIRST LINE </p>
 <p> HI THIS IS THE SECOND LINE </p>
-
+  <p> CHMAGE FROM GITHUB </p>
 <p> CHANGE DETECTED </p>
 </body>
 </html>
